Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14403

Qt Creator crashes when searching for a regular expression

XMLWordPrintable

    • 32d63165c40f30dafeab00bef4b1b1a1eb157813

      When I use the filesearch to search for a regular expression in all projects Qt Creator crashes.

      The crash was introduced by:

      commit 3b64374a3e68f7517559ffbb7dc4429af8f0a3f0
      Date: Mon Mar 23 16:31:08 2015 +0100
      FileSearch: Search in parallel.
      Task-number: QTCREATORBUG-10298

        For Gerrit Dashboard: QTCREATORBUG-14403
        # Subject Branch Project Status CR V

            con Eike Ziller
            mkrems Marcel Krems
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes