Replace QRegExp with QRegularExpression in FileSearch.

This fixes a race condition when searching in multiple files.

Task-number: QTCREATORBUG-14403
Change-Id: I5572d7f2cd9fe3c399efdf37e874d9773be76f57
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>